# teleprompter

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  release.sh
.github/workflows/: CI.yml  release.yml
docs/: index.html
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ControlPanel.css  ControlPanel.tsx  FloatingToolbar.css  FloatingToolbar.tsx  HotkeyStrip.css  HotkeyStrip.tsx  TeleprompterView.css  TeleprompterView.tsx
