[package]
name = "teleprompter"
version = "1.0.0"
description = "Teleprompter - Screen Share Invisible Floating Prompter"
authors = ["Likhith"]
edition = "2021"

[lib]
name = "teleprompter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "teleprompter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWindow"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
